...
                            <constraint firstItem="ag9-UK-WXH" firstAttribute="centerX" secondItem="kgH-fr-99A" secondAttribute="centerX" id="I5P-nY-Gcz"/>
                            <constraint firstItem="63a-PH-EJZ" firstAttribute="leading" secondItem="kgH-fr-99A" secondAttribute="leading" id="jcm-l4-2sp"/>
                            <constraint firstItem="63a-PH-EJZ" firstAttribute="top" secondItem="kWq-Q8-4EQ" secondAttribute="bottom" constant="-44" id="mFH-LF-6dH"/>
                            <constraint firstItem="ag9-UK-WXH" firstAttribute="top" secondItem="kWq-Q8-4EQ" secondAttribute="bottom" constant="14" id="o9h-Rv-k6g"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Favorites" id="IPr-jv-jAY"/>
                    <connections>
                        <outlet property="tableView" destination="63a-PH-EJZ" id="3or-yL-WkG"/>
                        <outlet property="titleLabel" destination="ag9-UK-WXH" id="vtu-Wz-5Di"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="23v-99-26E" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                            <constraint firstItem="dGn-xq-Doc" firstAttribute="leading" secondItem="iDP-Mu-JBk" secondAttribute="leading" id="liG-6R-kh8"/>
                            <constraint firstItem="dGn-xq-Doc" firstAttribute="top" secondItem="rbf-MD-3RU" secondAttribute="bottom" id="mMy-Ky-gTL"/>
                            <constraint firstAttribute="trailing" secondItem="U6W-WN-y6m" secondAttribute="trailing" id="mgz-NE-Eyy"/>
                            <constraint firstItem="AxA-aS-1rx" firstAttribute="top" secondItem="U6W-WN-y6m" secondAttribute="bottom" id="xYR-NT-Z8I"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="The Reddit" id="Jv3-Sk-7SU"/>
                    <connections>
                        <outlet property="searchBar" destination="dGn-xq-Doc" id="28y-dI-Dha"/>
                        <outlet property="tableView" destination="U6W-WN-y6m" id="bVw-KR-LKT"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="lSP-VJ-7CJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
