...
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="dismiss" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wef-VD-Wah">
                                <rect key="frame" x="176.5" y="28" width="22" height="22"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="22" id="1vf-te-ED4"/>
                                    <constraint firstAttribute="height" constant="22" id="De7-BF-21C"/>
                                </constraints>
                                <state key="normal" title="star" image="icon-star-empty22.png"/>
                                <connections>
                                    <action selector="favoriteBtnTapped:" destination="QFc-aI-2Q0" eventType="touchUpInside" id="QvA-fG-vip"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
